fix: featured ar on mobile

--- a/apps/laudebugs/src/components/featured.module.scss
+++ b/apps/laudebugs/src/components/featured.module.scss
@@ -74,7 +74,7 @@
     }
     .image {
       width: 100%;
-      height: 180px;
+      aspect-ratio: 16 / 9;
     }
   }
 }
